--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <script src="https://apis.google.com/js/platform.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700,700i" rel="stylesheet">
+    <script src="js/platform.js"></script>
   </head>
   <body>
     <div id="app"></div>
